# pydantic-ai-custom-guide

./: .gitignore  LICENSE  README.md
sandbox/: .env.example  README.md  conftest.py  pyproject.toml
sandbox/01-instalacja/: README.md  main.py  pyproject.toml
sandbox/01-installation/: README.md  README.pl.md  main.py  pyproject.toml  smoke_test.py
sandbox/02-agents/: README.md  README.pl.md  main.py  pyproject.toml
sandbox/02-agenty/: README.md  README.pl.md  main.py  pyproject.toml  smoke_test.py
sandbox/03-modele/: README.md  main.py  pyproject.toml  smoke_test.py
sandbox/03-models/: README.md  README.pl.md  main.py  pyproject.toml
sandbox/04-structured-output/: README.md  README.pl.md  main.py  pyproject.toml  smoke_test.py
sandbox/05-narzedzia/: README.md  main.py  pyproject.toml
sandbox/05-tools/: README.md  README.pl.md  main.py  pyproject.toml  smoke_test.py
sandbox/06-dependencies/: README.md  README.pl.md  main.py  pyproject.toml  smoke_test.py
sandbox/06-zaleznosci/: README.md  README.pl.md  main.py  pyproject.toml
sandbox/07-messages-history/: README.md  README.pl.md  main.py  pyproject.toml
sandbox/07-wiadomosci-historia/: README.md  README.pl.md  main.py  pyproject.toml  smoke_test.py
sandbox/08-streaming/: README.md  main.py  pyproject.toml  smoke_test.py
sandbox/09-mcp/: README.md  README.pl.md  dice_server.py  main.py  pyproject.toml  smoke_test.py
sandbox/10-multi-agent/: README.md  README.pl.md  main.py  pyproject.toml  smoke_test.py
sandbox/11-testing-evals/: README.md  README.pl.md  main.py  pyproject.toml
sandbox/11-testy-ewaluacje/: README.md  README.pl.md  main.py  pyproject.toml  smoke_test.py
sandbox/12-logfire-observability/: README.md  main.py  pyproject.toml  smoke_test.py
sandbox/13-pydantic-validation/: README.md  (+4 more)
(+278 files in other folders)
