[project]
name = "pydantic-ai-sandbox"
version = "0.1.0"
description = "Runnable Pydantic AI examples that accompany the tutorial, tested on Ollama Cloud."
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["shared", "[0-9][0-9]-*"]

[tool.uv.sources]
pai-sandbox-shared = { workspace = true }

[dependency-groups]
dev = ["ruff>=0.9", "basedpyright>=1.21", "pytest>=8"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["shared/src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # Runnable examples print their output and are not packages.
  "T201",
  "INP001",
  # "#> output" annotation comments next to print() calls.
  "ERA001",
  # Don't force docstrings on every example symbol.
  "D100", "D101", "D102", "D103", "D104", "D105", "D107",
  # Formatter / rule conflicts.
  "D203", "D213", "COM812", "ISC001",
  # Small examples use literals and inline exception messages freely.
  "PLR2004", "EM101", "EM102", "TRY003",
  # Todos.
  "TD002", "TD003", "FIX002",
]

[tool.ruff.lint.per-file-ignores]
"**/smoke_test.py" = ["S101"]
"**/test_*.py" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["pai_sandbox_shared"]

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
reportMissingTypeStubs = false
