[project]
name = "pai-sandbox-shared"
version = "0.1.0"
description = "Shared helpers for the Pydantic AI sandbox: Ollama Cloud model factory."
requires-python = ">=3.12"
dependencies = ["pydantic-ai>=1.0", "python-dotenv>=1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pai_sandbox_shared"]
